# UMD-Client

./: .env.toml.example  .gitignore  CMakeLists.txt  LICENSE  __init__.py  boot.sh  camera.py  func.py  install.sh  libserialport.h  main.cpp  main.py  pyproject.toml  readme.cn.md  readme.md  requirements.txt  requirements_full.txt  run.sh  sensor.py  transfer.py  transmit.py  update.sh
.github/workflows/: ci.yml
Demo/: LTR390.py  SGP40.py  readme_rpi_CN.txt  readme_rpi_EN.txt  setup.py
function/: onborad.py  transfer.py
interface/: BME280.py  ICM20948.py  LTR390.py  SGP40.py  SN3003.py  TSL2591.py
modules/OV5647/: __init__.py
modules/epd2in13b_V4/: __init__.py  epd2in13b_V4.py
modules/sensor_hat/: SGP40.py  __init__.py
modules/sn3003/: __init__.py
python/: ICM20948.py  TSL2591.py  test.py
src/umd_client/: __init__.py  __main__.py  app.py  cli.py  config.py  init_config.py  scheduler.py  transport.py
src/umd_client/assets/: __init__.py
src/umd_client/assets/font/: __init__.py
src/umd_client/camera/: __init__.py
src/umd_client/camera/ov5647/: __init__.py
src/umd_client/display/: __init__.py
src/umd_client/display/epd2in13b_v4/: __init__.py  epd2in13b_v4.py  epdconfig.py  requirements.txt
src/umd_client/sensors/: __init__.py  factory.py  types.py
src/umd_client/sensors/sensor_hat/: ICM20948.py  LTR390.py  TSL2591.py  __init__.py
src/umd_client/sensors/sn3003/: __init__.py  sn3003fsxcsn01.toml
src/umd_client/storage/: __init__.py
static/: FluentSystemIcons-Resizable.css
templates/: index.html
tests/: test_camera.py  test_cli.py  test_config.py  test_display.py  test_scheduler.py  test_sensor_hat_reading.py  test_transport.py
utils/: adapter.py  init.py  send.py  sql.py
